sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5-9.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res3_dir_files_2
---
Found {
    items: [
        ReadDirResponseItem {
            file_path: "foo/bar",
            file_name: "bar",
            file_type: Dir,
            size: 0,
            modified_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
            deleted_at: None,
            permission: 493,
        },
        ReadDirResponseItem {
            file_path: "foo/test.txt",
            file_name: "test.txt",
            file_type: File,
            size: 10,
            modified_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
            deleted_at: None,
            permission: 420,
        },
    ],
}
