sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_5.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res1
---
CreateWorkspaceResponse {
    workspace_id: "KKY4v_RsVnygPCvp9OLiuJrmIauA9zgO1PTaR_XZZ18iBKsW0IkHQ66gpvZkC9bE",
}
