sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_6-2.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: blob_id_1
---
Created {
    blob_id: "jw-czHAStEMLXbUqvBIb1tuk34MtlDjhxacVO-sG7rLa9XMvDfyayf51czUgud8N",
}
