sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_6-6.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res2_attr3
---
Found {
    file_type: Dir,
    size: 0,
    modified_at: SystemTime {
        tv_sec: 1261440000,
        tv_nsec: 0,
    },
}
