sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_6-9.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res3_attr1
---
Found {
    file_type: File,
    size: 10,
    modified_at: SystemTime {
        tv_sec: 1261440000,
        tv_nsec: 0,
    },
}
